# SoraCleaner

./: .gitignore  README.md  README_CN.md  config.yaml  main.py  pyproject.toml
modules/: erase.py  sttn.py
utils/: video_utils.py
